# hardware-monitor-applet

./: .cvsignore  .gitignore  1.4.6-upgrade-fix-xfce4-config.bash  AUTHORS  ChangeLog  HardwareMonitor.server.in.in  MAINTAINERS  Makefile.am  Makefile.in  NEWS  README  README.md  autogen.sh  config.h.in  configure.ac  hardware-monitor.doap  xfce4-hardware-monitor-plugin.desktop.in
1.4.4/: xfce4-hardware-monitor-plugin_1.4.4-1_amd64.deb  xfce4-hardware-monitor-plugin_1.4.4-1_i386.deb
1.4.5/: xfce4-hardware-monitor-plugin_1.4.5-1_amd64.deb  xfce4-hardware-monitor-plugin_1.4.5-1_i386.deb
1.4.6/: xfce4-hardware-monitor-plugin_1.4.6-1_amd64.deb  xfce4-hardware-monitor-plugin_1.4.6-1_i386.deb
debian/: changelog  control  copyright  rules  watch  xfce4-hardware-monitor-plugin.lintian-overrides
po/: .cvsignore  ChangeLog  Makefile.in  POTFILES.in  ar.po  as.po  az.po  be.po  bg.po  bn_IN.po  bs.po  ca.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  es.po  eu.po  fi.po  fr.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  it.po  ja.po  kn.po  ko.po  lv.po  mr.po  ms.po  nb.po  ne.po  nl.po  (+21 more)
src/: .cvsignore  Makefile.am  Makefile.in  TODO  applet.cpp  applet.hpp  bar-view.cpp  bar-view.hpp  canvas-view.cpp  canvas-view.hpp  choose-monitor-window.cpp  choose-monitor-window.hpp  column-view.cpp  column-view.hpp  curve-view.cpp  curve-view.hpp  flame-view.cpp  flame-view.hpp  gui-helpers.hpp  helpers.cpp  helpers.hpp  i18n.hpp  main.cpp  main.cpp.old  monitor-impls.cpp  monitor-impls.hpp  monitor.hpp  pixbuf-drawing.hpp  preferences-window.cpp  preferences-window.hpp  register_plugin.c  text-view.cpp  text-view.hpp  ui.glade  ui.gladep  value-history.cpp  value-history.hpp  view.cpp  view.hpp
